Fixed spacing on mobile view and fixed JS to not leave a blank spot when resizing

--- a/website/css/index.css
+++ b/website/css/index.css
@@ -383,7 +383,7 @@ footer {
         margin: 0 2%;
     }
     #blog {
-        margin-bottom: 5%;
+        margin-bottom: 10%;
     }
     #new {
         margin-left: 2%;
